fix #98: add rule to make scrollbar float right.
`overflow overlay` is only compatible with WebKit（e.g. Safari）and Blink (e.g. Chrome & Opera),  Results on Firefox maybe different.

--- a/source/css/base.styl
+++ b/source/css/base.styl
@@ -20,6 +20,7 @@ body
   font-size 11pt
   font-weight normal
   line-height 2em
+  overflow overlay
   background-color $light-background-color
   color $light-font-color
   transition color 0.2s ease, border-color 0.2s ease, background 0.2s ease, opacity 0.2s ease
